main_template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  CoffeinBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: coffein-cloudformation-bucket

  CoffeinVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Coffein-Network
  CoffeinInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Coffein-InternetGateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref CoffeinVPC
      InternetGatewayId: !Ref CoffeinInternetGateway
  CoffeinPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CoffeinVPC
      CidrBlock: 10.0.11.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: Coffein-PublicSubnet-A
  CoffeinPublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CoffeinVPC
      CidrBlock: 10.0.12.0/24
      AvailabilityZone: !Select
        - 1
        - !GetAZs ''
      Tags:
        - Key: Name
          Value: Coffein-PublicSubnet-B
  CoffeinRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CoffeinVPC
      Tags:
        - Key: Name
          Value: Coffein-RouteTable
  MainInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref CoffeinRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref CoffeinInternetGateway
  CoffeinPublicSubnetAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref CoffeinRouteTable
      SubnetId: !Ref CoffeinPublicSubnetA
  CoffeinPublicSubnetBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref CoffeinRouteTable
      SubnetId: !Ref CoffeinPublicSubnetB

  CoffeinSecGr1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http-https-ssh-backendport
      VpcId: !Ref CoffeinVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 5.152.86.205/32
      Tags:
        - Key: Name
          Value: Coffein-SecGr1

  CoffeinSecurityGroupForLB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http 8000 port
      VpcId: !Ref CoffeinVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Coffein-SecGrForLB

  CoffeinLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: Coffein-LaunchTemplate
      LaunchTemplateData:
        ImageId: !Ref CoffeinAMI
        InstanceType: !Ref CoffeinInstanceType
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeviceIndex: 0
            Groups:
              - !Ref CoffeinSecGr1
        KeyName: !Ref CoffeinKeyPairName

  CoffeinASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref CoffeinLaunchTemplate
        Version: !GetAtt CoffeinLaunchTemplate.LatestVersionNumber
      DesiredCapacity: '2'
      MaxSize: '3'
      MinSize: '2'
      VPCZoneIdentifier:
        - !Ref CoffeinPublicSubnetA
        - !Ref CoffeinPublicSubnetB
      TargetGroupARNs:
        - !Ref CoffeinTargetGroup
      Tags:
        - Key: Name
          Value: Coffein-AutoScalingGroup
          PropagateAtLaunch: true

  CoffeinScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref CoffeinASG
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        TargetValue: 50
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization

  CoffeinLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
        - !Ref CoffeinPublicSubnetA
        - !Ref CoffeinPublicSubnetB
      SecurityGroups:
        - !Ref CoffeinSecurityGroupForLB
      Tags:
        - Key: Name
          Value: Coffein-LoadBalancer

  CoffeinApplicatipnLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref CoffeinTargetGroup
      LoadBalancerArn: !Ref CoffeinLoadBalancer
      Port: 8000
      Protocol: HTTP

  CoffeinTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: Coffein-LB-TargetGroup
      Port: 8000
      Protocol: HTTP
      VpcId: !Ref CoffeinVPC
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      TargetType: instance

Parameters:
  CoffeinAMI:
    Description: Suitable custom AMI for current Stack
    Type: String
    Default: ami-00a77ddce40c1d0e5
  CoffeinInstanceType:
    Description: EC2 instance type. Default is t2.micro.
    Type: String
    Default: t2.micro
  CoffeinKeyPairName:
    Description: EC2 KeyPair for SSH access, Default aws-formation
    Type: AWS::EC2::KeyPair::KeyName
    Default: aws-formation
